--- a/AF_Augmentation.csproj
+++ b/AF_Augmentation.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="NAudio" Version="2.1.0" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.6.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OptionsHandler\OptionsHandler.csproj" />
+  </ItemGroup>
 </Project>
