--- a/AF_Augmentation.csproj
+++ b/AF_Augmentation.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<AvaloniaResource Include="Assets\**"/>
+		<AvaloniaResource Include="Assets\**" />
 	</ItemGroup>
 	
   <ItemGroup>
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OptionsHandler\OptionsHandler.csproj" />
+    <ProjectReference Include="..\OptionsHandler\AudioEffects.csproj" />
   </ItemGroup>
 
   <ItemGroup>
