--- a/AF_Augmentation.csproj
+++ b/AF_Augmentation.csproj
@@ -31,6 +31,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="Views\EffectView1.axaml.cs">
+      <DependentUpon>EffectView1.axaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
