Overwrote EchoControl as ViewModel for ViewLocator + started the rework of effect controls' getting from code behind through reflection

--- a/AF_Augmentation.csproj
+++ b/AF_Augmentation.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OptionsHandler\AudioEffects.csproj" />
+    <ProjectReference Include="..\AudioEffects\AudioEffects.csproj" />
   </ItemGroup>
 
   <ItemGroup>
