--- a/AF_Augmentation.csproj
+++ b/AF_Augmentation.csproj
@@ -18,6 +18,7 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+    <PackageReference Include="Deadpikle.AvaloniaProgressRing" Version="0.10.0" />
     <PackageReference Include="NAudio" Version="2.1.0" />
   </ItemGroup>
 
